--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ keywords = ["crypto"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-block-cipher-trait = "0.6.2"
+block-cipher = "0.8"
 
 [dev-dependencies]
-aes = "0.3.2"
-fpe = "0.2.0"
+aes = "0.5"
+fpe = "0.3"
 lazy_static = "1.4.0"
 num = "0.2.1"
 quickcheck = "0.9.1"
