--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,5 @@
-format_code_in_doc_comments=true
-format_macro_matchers=true
-merge_imports=true
-use_field_init_shorthand=true
-wrap_comments=true
+format_code_in_doc_comments = true
+format_macro_matchers = true
+imports_granularity = "Crate"
+use_field_init_shorthand = true
+wrap_comments = true
